--- a/packages.config
+++ b/packages.config
@@ -6,6 +6,7 @@
   <package id="FFME.Windows" version="4.0.270" targetFramework="net462" developmentDependency="true" />
   <package id="FFmpeg.AutoGen" version="4.1.0.1" targetFramework="net462" />
   <package id="MahApps.Metro" version="1.6.5" targetFramework="net462" />
+  <package id="MahApps.Metro.IconPacks" version="2.3.0" targetFramework="net472" />
   <package id="MaterialDesignColors" version="1.1.3" targetFramework="net462" />
   <package id="MaterialDesignThemes" version="2.5.0.1205" targetFramework="net462" />
   <package id="Microsoft.NETCore.Platforms" version="2.1.2" targetFramework="net462" />
