Added Drak Mode Option

--- a/App.config
+++ b/App.config
@@ -71,6 +71,9 @@
             <setting name="AutoMinimize" serializeAs="String">
                 <value>True</value>
             </setting>
+            <setting name="DarkMode" serializeAs="String">
+                <value>False</value>
+            </setting>
         </KSP_WPF.Properties.Settings>
         <KSP_WPF.Settings>
             <setting name="IsAutoLogin" serializeAs="String">
