--- a/Properties/Settings.settings
+++ b/Properties/Settings.settings
@@ -62,5 +62,8 @@
     <Setting Name="AutoMinimize" Type="System.Boolean" Scope="User">
       <Value Profile="(Default)">True</Value>
     </Setting>
+    <Setting Name="DarkMode" Type="System.Boolean" Scope="User">
+      <Value Profile="(Default)">False</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
