Code Refactor and added support for windows 7

--- a/packages.config
+++ b/packages.config
@@ -3,6 +3,7 @@
   <package id="CachedImage" version="0.1.8.0" targetFramework="net462" />
   <package id="ControlzEx" version="3.0.2.4" targetFramework="net462" />
   <package id="Dragablz" version="0.0.3.203" targetFramework="net462" />
+  <package id="Extended.Wpf.Toolkit" version="3.4.0" targetFramework="net472" />
   <package id="FFME.Windows" version="4.0.270" targetFramework="net462" developmentDependency="true" />
   <package id="FFmpeg.AutoGen" version="4.1.0.1" targetFramework="net462" />
   <package id="MahApps.Metro" version="1.6.5" targetFramework="net462" />
