Added support code for non-windows10 devices

--- a/App.config
+++ b/App.config
@@ -74,6 +74,9 @@
             <setting name="DarkMode" serializeAs="String">
                 <value>False</value>
             </setting>
+            <setting name="W10Warn" serializeAs="String">
+                <value>False</value>
+            </setting>
         </KSP_WPF.Properties.Settings>
         <KSP_WPF.Settings>
             <setting name="IsAutoLogin" serializeAs="String">
