Defualt setting is changed

--- a/App.config
+++ b/App.config
@@ -69,7 +69,7 @@
                 <value>False</value>
             </setting>
             <setting name="AutoMinimize" serializeAs="String">
-                <value>True</value>
+                <value>False</value>
             </setting>
             <setting name="DarkMode" serializeAs="String">
                 <value>False</value>
