Windows 7 support and minor changes

--- a/App.config
+++ b/App.config
@@ -77,13 +77,79 @@
             <setting name="W10Warn" serializeAs="String">
                 <value>False</value>
             </setting>
-        </KSP_WPF.Properties.Settings>
-        <KSP_WPF.Settings>
-            <setting name="IsAutoLogin" serializeAs="String">
+            <setting name="Upgraded" serializeAs="String">
                 <value>False</value>
             </setting>
-            <setting name="cookie" serializeAs="String">
+        </KSP_WPF.Properties.Settings>
+        <KSP_WPF.Settings>
+            <setting name="AutoStart" serializeAs="String">
+                <value>False</value>
+            </setting>
+            <setting name="Disable_Like" serializeAs="String">
+                <value>False</value>
+            </setting>
+            <setting name="Disable_VIP" serializeAs="String">
+                <value>False</value>
+            </setting>
+            <setting name="AutoLogin" serializeAs="String">
+                <value>False</value>
+            </setting>
+            <setting name="AutoEmail" serializeAs="String">
                 <value />
+            </setting>
+            <setting name="AutoPassword" serializeAs="String">
+                <value />
+            </setting>
+            <setting name="Disable_Message" serializeAs="String">
+                <value>False</value>
+            </setting>
+            <setting name="MemoryControl" serializeAs="String">
+                <value>False</value>
+            </setting>
+            <setting name="ImageClick" serializeAs="String">
+                <value>True</value>
+            </setting>
+            <setting name="FullScreen" serializeAs="String">
+                <value>False</value>
+            </setting>
+            <setting name="ScrollTimeline" serializeAs="String">
+                <value>True</value>
+            </setting>
+            <setting name="TimeScrollInside" serializeAs="String">
+                <value>True</value>
+            </setting>
+            <setting name="UseGIF" serializeAs="String">
+                <value>True</value>
+            </setting>
+            <setting name="DefaultFriendOnly" serializeAs="String">
+                <value>True</value>
+            </setting>
+            <setting name="HideScrollBar" serializeAs="String">
+                <value>True</value>
+            </setting>
+            <setting name="ShowComment" serializeAs="String">
+                <value>True</value>
+            </setting>
+            <setting name="PositionPostToTop" serializeAs="String">
+                <value>False</value>
+            </setting>
+            <setting name="PositionTimelineToTop" serializeAs="String">
+                <value>False</value>
+            </setting>
+            <setting name="DefaultMinimize" serializeAs="String">
+                <value>False</value>
+            </setting>
+            <setting name="AutoMinimize" serializeAs="String">
+                <value>False</value>
+            </setting>
+            <setting name="DarkMode" serializeAs="String">
+                <value>False</value>
+            </setting>
+            <setting name="W10Warn" serializeAs="String">
+                <value>False</value>
+            </setting>
+            <setting name="IsAutoLogin" serializeAs="String">
+                <value>False</value>
             </setting>
         </KSP_WPF.Settings>
     </userSettings>
