Added story modification feature and bug fixes

--- a/App.config
+++ b/App.config
@@ -33,7 +33,7 @@
                 <value>False</value>
             </setting>
             <setting name="MemoryControl" serializeAs="String">
-                <value>False</value>
+                <value>True</value>
             </setting>
             <setting name="ImageClick" serializeAs="String">
                 <value>True</value>
@@ -78,6 +78,9 @@
                 <value>False</value>
             </setting>
             <setting name="Upgraded" serializeAs="String">
+                <value>False</value>
+            </setting>
+            <setting name="GIFProfile" serializeAs="String">
                 <value>False</value>
             </setting>
         </KSP_WPF.Properties.Settings>
