--- a/Properties/Settings.settings
+++ b/Properties/Settings.settings
@@ -24,7 +24,7 @@
       <Value Profile="(Default)">False</Value>
     </Setting>
     <Setting Name="MemoryControl" Type="System.Boolean" Scope="User">
-      <Value Profile="(Default)">False</Value>
+      <Value Profile="(Default)">True</Value>
     </Setting>
     <Setting Name="ImageClick" Type="System.Boolean" Scope="User">
       <Value Profile="(Default)">True</Value>
@@ -69,6 +69,9 @@
       <Value Profile="(Default)">False</Value>
     </Setting>
     <Setting Name="Upgraded" Type="System.Boolean" Scope="User">
+      <Value Profile="(Default)">False</Value>
+    </Setting>
+    <Setting Name="GIFProfile" Type="System.Boolean" Scope="User">
       <Value Profile="(Default)">False</Value>
     </Setting>
   </Settings>
