--- a/packages.config
+++ b/packages.config
@@ -65,5 +65,6 @@
   <package id="WindowsAPICodePack-Core" version="1.1.2" targetFramework="net462" />
   <package id="WindowsAPICodePack-Shell" version="1.1.1" targetFramework="net462" />
   <package id="WpfAnimatedGif" version="1.4.17" targetFramework="net462" />
+  <package id="WPFMediaKit" version="2.2.0" targetFramework="net472" />
   <package id="XamlAnimatedGif" version="1.1.10" targetFramework="net462" />
 </packages>
