--- a/Properties/Settings.settings
+++ b/Properties/Settings.settings
@@ -39,7 +39,7 @@
       <Value Profile="(Default)">True</Value>
     </Setting>
     <Setting Name="UseGIF" Type="System.Boolean" Scope="User">
-      <Value Profile="(Default)">True</Value>
+      <Value Profile="(Default)">False</Value>
     </Setting>
     <Setting Name="DefaultFriendOnly" Type="System.Boolean" Scope="User">
       <Value Profile="(Default)">True</Value>
@@ -73,6 +73,9 @@
     </Setting>
     <Setting Name="GIFProfile" Type="System.Boolean" Scope="User">
       <Value Profile="(Default)">False</Value>
+    </Setting>
+    <Setting Name="PostNoGIF" Type="System.Boolean" Scope="User">
+      <Value Profile="(Default)">True</Value>
     </Setting>
   </Settings>
 </SettingsFile>
