--- a/App.config
+++ b/App.config
@@ -48,7 +48,7 @@
                 <value>True</value>
             </setting>
             <setting name="UseGIF" serializeAs="String">
-                <value>True</value>
+                <value>False</value>
             </setting>
             <setting name="DefaultFriendOnly" serializeAs="String">
                 <value>True</value>
@@ -82,6 +82,9 @@
             </setting>
             <setting name="GIFProfile" serializeAs="String">
                 <value>False</value>
+            </setting>
+            <setting name="PostNoGIF" serializeAs="String">
+                <value>True</value>
             </setting>
         </KSP_WPF.Properties.Settings>
         <KSP_WPF.Settings>
@@ -153,6 +156,9 @@
             </setting>
             <setting name="IsAutoLogin" serializeAs="String">
                 <value>False</value>
+            </setting>
+            <setting name="PostNoGIF" serializeAs="String">
+                <value>True</value>
             </setting>
         </KSP_WPF.Settings>
     </userSettings>
