--- a/Settings.settings
+++ b/Settings.settings
@@ -71,5 +71,8 @@
     <Setting Name="IsAutoLogin" Type="System.String" Scope="User">
       <Value Profile="(Default)">False</Value>
     </Setting>
+    <Setting Name="PostNoGIF" Type="System.Boolean" Scope="User">
+      <Value Profile="(Default)">True</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
