Added support for new multimedia upload feature(KakaoStory API 46)

--- a/KSP-WPF.csproj
+++ b/KSP-WPF.csproj
@@ -510,6 +510,9 @@
     </BootstrapperPackage>
   </ItemGroup>
   <ItemGroup>
+    <EmbeddedResource Include="video2.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </EmbeddedResource>
     <Resource Include="icon2.ico" />
     <EmbeddedResource Include="gif.png">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
