Hotfix for image uploading issue

--- a/App.config
+++ b/App.config
@@ -86,6 +86,9 @@
             <setting name="PostNoGIF" serializeAs="String">
                 <value>True</value>
             </setting>
+            <setting name="AutoPicDir" serializeAs="String">
+                <value />
+            </setting>
         </KSP_WPF.Properties.Settings>
         <KSP_WPF.Settings>
             <setting name="AutoStart" serializeAs="String">
@@ -159,6 +162,9 @@
             </setting>
             <setting name="PostNoGIF" serializeAs="String">
                 <value>True</value>
+            </setting>
+            <setting name="AutoPicDir" serializeAs="String">
+                <value>DOGE</value>
             </setting>
         </KSP_WPF.Settings>
     </userSettings>
