--- a/Settings.settings
+++ b/Settings.settings
@@ -74,5 +74,8 @@
     <Setting Name="PostNoGIF" Type="System.Boolean" Scope="User">
       <Value Profile="(Default)">True</Value>
     </Setting>
+    <Setting Name="AutoPicDir" Type="System.String" Scope="User">
+      <Value Profile="(Default)">DOGE</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
